--- a/src/main/resources/lang/texts.properties
+++ b/src/main/resources/lang/texts.properties
@@ -17,8 +17,6 @@ modelement.attribute.description=Create a Custom Attribute
 dialog.entity_list_entry.remove_entity=Remove entity type
 dialog.selector.attribute.title=Attribute selection
 dialog.selector.attribute.message=Please select an attribute
-trigger.item_attribute_modifier=Calculating Attribute Modifiers (Deprecated)
-blockly.block.add_item_modifier=Add or replace modifier %3 of an attribute %1 to an item %2 on slot %4
 blockly.block.add_modifier=Add modifier %3 of an attribute %1 to an entity %2 as permanent %4 check if has modifier before adding %5 (uncheck if you check it yourself)
 blockly.block.remove_modifier=Remove modifier %3 of an attribute %1 from an entity %2 as permanent %4
 blockly.block.remove_modifier_uuid=Remove modifier with UUID %3 of an attribute %1 from an entity %2 as permanent %4
@@ -34,9 +32,13 @@ blockly.block.has_modifier_uuid=has entity %2 a modifier with UUID %3 of an attr
 blockly.block.set_attribute=Set base value of attribute %1 of %2 to %3
 blockly.block.set_attribute_from_mod=Set base value of attribute %1 of %2 to %3
 
+# Event
+trigger.item_attribute_modifier=Calculating Attribute Modifiers
+blockly.block.remove_modifier_to_item=Remove modifier %1 of an attribute %2 from an item
+blockly.block.remove_modifier_to_item_from_mod=Remove modifier %1 of an attribute %2 from an item
+blockly.block.add_modifier_to_item_from_mod=Add modifier %1 of an attribute %2 to an item
+blockly.block.add_modifier_to_item=Add modifier %1 of an attribute %2 to an item
+blockly.block.event_modifier_slot=For slot %1 do %2
+
 # Deprecated
-blockly.block.remove_modifier_to_item=Remove modifier %1 of an attribute %2 from an item  (Deprecated - use Add modifier for items)
-blockly.block.remove_modifier_to_item_from_mod=Remove modifier %1 of an attribute %2 from an item  (Deprecated - use Add modifier for items)
-blockly.block.add_modifier_to_item_from_mod=Add modifier %1 of an attribute %2 to an item  (Deprecated - use Add modifier for items)
-blockly.block.add_modifier_to_item=Add modifier %1 of an attribute %2 to an item  (Deprecated - use Add modifier for items)
-blockly.block.event_modifier_slot=For slot %1 do %2 (Deprecated - use Add modifier for items)
+blockly.block.add_item_modifier=Add or replace modifier %3 of an attribute %1 to an item %2 on slot %4 (Deprecated, do not use)
