--- a/src/main/resources/lang/texts.properties
+++ b/src/main/resources/lang/texts.properties
@@ -41,4 +41,4 @@ blockly.block.add_modifier_to_item=Add modifier %1 of an attribute %2 to an item
 blockly.block.event_modifier_slot=For slot %1 do %2
 
 # Deprecated
-blockly.block.add_item_modifier=Add or replace modifier %3 of an attribute %1 to an item %2 on slot %4 (Deprecated, do not use)
+blockly.block.add_item_modifier=Add or replace modifier %3 of an attribute %1 to an item %2 on slot %4 (REMOVED IN 1.20.6)
