--- a/src/main/resources/lang/texts_zh_CN.properties
+++ b/src/main/resources/lang/texts_zh_CN.properties
@@ -12,7 +12,7 @@ blockly.block.set_attribute_from_mod=设置%2属性%1的基值为%3
 
 # Event
 trigger.item_attribute_modifier=计算属性修饰符
-blockly.block.remove_modifier_to_item=从物品移除属性%2名字%1的修饰符
+blockly.block.remove_modifier_to_item=从物品移除属性%2名字的修饰符%1
 blockly.block.remove_modifier_to_item_from_mod=从物品移除属性%2名字%1的修饰符（Mod）
 blockly.block.add_modifier_to_item_from_mod=添加属性%2的修饰符%1到一个物品（Mod）
 blockly.block.add_modifier_to_item=添加属性%2的修饰符%1到一个物品
