--- a/src/main/resources/lang/texts_zh_CN.properties
+++ b/src/main/resources/lang/texts_zh_CN.properties
@@ -3,16 +3,16 @@ blockly.block.add_modifier=添加属性%1的修饰符%3到实体%2，永久化%4
 blockly.block.remove_modifier=从实体%2移除属性%1的修饰符%3
 blockly.block.remove_modifier_uuid=从实体%2移除名为%3的属性%1的修饰符
 blockly.block.create_new_modifier=创建新的值%2操作为%3的修饰符%1
-blockly.block.get_attribute_from_mod=得到属性%1的基值从%2
-blockly.block.get_attribute_whole_from_mod=从%2得到属性%1的值
-blockly.block.has_attribute_from_mod=实体%1有属性%2 
+blockly.block.get_attribute_from_mod=得到属性%1的基值从%2(Mod)
+blockly.block.get_attribute_whole_from_mod=从%2得到属性%1的值(Mod)
+blockly.block.has_attribute_from_mod=实体%1有属性%2 (Mod)
 blockly.block.has_modifier=实体%2有属性%1的修饰符%3
 blockly.block.has_modifier_uuid=实体%2有属性%1名字为%3的修饰符
 blockly.block.set_attribute_from_mod=设置%2属性%1的基值为%3
 
 # Event
 trigger.item_attribute_modifier=计算属性修饰符
-blockly.block.remove_modifier_to_item=从物品移除属性%2名字的修饰符%1
+blockly.block.remove_modifier_to_item=从物品移除属性%2名字%1的修饰符
 blockly.block.remove_modifier_to_item_from_mod=从物品移除属性%2名字%1的修饰符（Mod）
 blockly.block.add_modifier_to_item_from_mod=添加属性%2的修饰符%1到一个物品（Mod）
 blockly.block.add_modifier_to_item=添加属性%2的修饰符%1到一个物品
