--- a/src/main/resources/lang/texts_zh_CN.properties
+++ b/src/main/resources/lang/texts_zh_CN.properties
@@ -8,7 +8,7 @@ blockly.block.get_attribute_whole_from_mod=从实体%2得到属性%1的计算后
 blockly.block.has_attribute_from_mod=实体%1拥有属性%2 (Mod)
 blockly.block.has_modifier=实体%2拥有属性%1的修饰符%3
 blockly.block.has_modifier_uuid=实体%2拥有属性%1名字为%3的修饰符
-blockly.block.set_attribute_from_mod=设置%2属性%1的基值为%3
+blockly.block.set_attribute_from_mod=设置实体%2的属性%1的基值为%3（Mod)
 
 # Event
 trigger.item_attribute_modifier=计算属性修饰符时
