--- a/src/main/resources/lang/texts.properties
+++ b/src/main/resources/lang/texts.properties
@@ -1,15 +1,11 @@
 # suppress inspection "UnusedProperty" for whole file
-blockly.block.add_modifier=Add modifier %3 of an attribute %1 to an entity %2 as permanent %4 check if has modifier before adding %5 (uncheck if you check it yourself)
 blockly.block.add_modifier_from_mod=Add modifier %3 of an attribute %1 to an entity %2 as permanent %4 check if has modifier before adding %5 (uncheck if you check it yourself)
-blockly.block.remove_modifier=Remove modifier %3 of an attribute %1 from an entity %2
-blockly.block.remove_modifier_uuid=Remove modifier with name %3 of an attribute %1 from an entity %2
 blockly.block.remove_modifier_from_mod=Remove modifier %3 of an attribute %1 from an entity %2
 blockly.block.create_new_modifier=Create new modifier named %1 with value %2 and operation %3
 blockly.block.get_attribute_from_mod=Get base value of attribute %1 from %2
 blockly.block.get_attribute_whole_from_mod=Get value of attribute %1 from %2
-blockly.block.has_attribute_from_mod=has entity %1 an attribute %2 
-blockly.block.has_modifier=has entity %2 a modifier %3 of an attribute %1
-blockly.block.has_modifier_uuid=has entity %2 a modifier with name %3 of an attribute %1
+blockly.block.has_attribute_from_mod=has entity %1 an attribute %2
+blockly.block.has_modifier_from_mod=has entity %2 a modifier %3 of an attribute %1
 blockly.block.set_attribute_from_mod=Set base value of attribute %1 of %2 to %3
 
 # Event
